fixed photo gallery

--- a/media.html
+++ b/media.html
@@ -9,7 +9,7 @@
   <!-- OPTIONAL IMPORTS -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
   <!-- END OPTIONAL IMPORTS -->
-  <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/>
+  <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/> -->
   <link rel="stylesheet" type="text/css" href="slick-master/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick-master/slick/slick-theme.css"/>
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/lightbox.css"/>
@@ -60,122 +60,98 @@
   <div class="row">
       <div class="column has-text-centered">
         <a
-          href="/MGMT/assets/images/grammy-awards.jpg"
+          href="assets/images/grammy-awards.jpg"
           data-lightbox="demo-lightbox"
           data-title="Ben and Andrew">
-          <img src="/MGMT/assets/images/grammy-awards.jpg" />
+          <img class="gallery" src="assets/images/grammy-awards.jpg" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="/MGMT/assets/images/against-a-wall.jpg"
+          href="assets/images/against-a-wall.jpg"
           data-lightbox="demo-lightbox"
           data-title="Friends">
-          <img src="/MGMT/assets/images/against-a-wall.jpg" />
+          <img class="gallery" src="assets/images/against-a-wall.jpg" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="/MGMT/assets/images/in-woods.jpg"
+          href="assets/images/in-woods.jpg"
           data-lightbox="demo-lightbox"
           data-title="Ben">
-          <img src="/MGMT/assets/images/in-woods.jpg" />
+          <img class="gallery" src="assets/images/in-woods.jpg" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="/MGMT/assets/images/ben-and-andrew.png"
+          href="assets/images/ben-and-andrew.png"
           data-lightbox="demo-lightbox"
           data-title="Smoking">
-          <img src="/MGMT/assets/images/ben-and-andrew.png" />
+          <img class="gallery" src="assets/images/ben-and-andrew.png" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="/MGMT/assets/images/piggy-back.jpg"
-          data-lightbox="demo-lightbox"
-          data-title="Chilling">
-          <img src="/MGMT/assets/images/piggy-back.jpg" />
-        </a>
-      </div>
-      <div class="column has-text-centered">
-        <a
-          href="/MGMT/assets/images/ben-portrait.jpg"
-          data-lightbox="demo-lightbox"
-          data-title="Ben Playing">
-          <img src="/MGMT/assets/images/ben-portrait.jpg" />
-        </a>
-      </div>
-      <div class="column has-text-centered">
-        <a
-          href="/MGMT/assets/images/mgmt-concert-barcelona.jpg"
+          href="assets/images/black&white.jpg"
           data-lightbox="demo-lightbox"
           data-title="Smoking">
-          <img src="/MGMT/assets/images/mgmt-concert-barcelona.jpg" />
+          <img class="gallery" src="assets/images/black&white.jpg" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="/MGMT/assets/images/black&white.jpg"
+          href="assets/images/smoking2.jpg"
           data-lightbox="demo-lightbox"
           data-title="Smoking">
-          <img src="/MGMT/assets/images/black&white.jpg" />
+          <img class="gallery" src="assets/images/smoking2.jpg" />
         </a>
       </div>
       <div class="column has-text-centered">
         <a
-          href="/MGMT/assets/images/smoking2.jpg"
+          href="assets/images/by-river.jpg"
           data-lightbox="demo-lightbox"
           data-title="Smoking">
-          <img src="/MGMT/assets/images/smoking2.jpg" />
+          <img class="gallery" src="assets/images/by-river.jpg" />
         </a>
       </div>
     <div class="column has-text-centered">
       <a
-        href="/MGMT/assets/images/2018-mgmt.jpg"
+        href="assets/images/2018-mgmt.jpg"
         data-lightbox="demo-lightbox"
         data-title="Smoking">
-        <img src="/MGMT/assets/images/2018-mgmt.jpg" />
+        <img class="gallery" src="assets/images/2018-mgmt.jpg" />
       </a>
     </div>
     <div class="column has-text-centered">
       <a
-        href="/MGMT/assets/images/smoking2.jpg"
+        href="assets/images/crossed-legs.png"
         data-lightbox="demo-lightbox"
         data-title="Smoking">
-        <img src="/MGMT/assets/images/smoking2.jpg" />
+        <img class="gallery" src="assets/images/crossed-legs.png" />
       </a>
     </div>
     <div class="column has-text-centered">
       <a
-        href="/MGMT/assets/images/eyes-closed.jpg"
+        href="assets/images/piggy-back.jpg"
         data-lightbox="demo-lightbox"
-        data-title="Smoking">
-        <img src="/MGMT/assets/images/eyes-closed.jpg" />
+        data-title="Chilling">
+        <img class="gallery" src="assets/images/piggy-back.jpg" />
       </a>
     </div>
     <div class="column has-text-centered">
       <a
-        href="/MGMT/assets/images/black&white.jpg"
+        href="assets/images/band-members.jpg"
         data-lightbox="demo-lightbox"
-        data-title="Smoking">
-        <img src="/MGMT/assets/images/black&white.jpg" />
+        data-title="Ben Playing">
+        <img class="gallery" src="assets/images/band-members.jpg" />
       </a>
     </div>
     <div class="column has-text-centered">
       <a
-        href="/MGMT/assets/images/tie-dye.jpg"
+        href="assets/images/mgmt-concert-barcelona.jpg"
         data-lightbox="demo-lightbox"
         data-title="Smoking">
-        <img src="/MGMT/assets/images/tie-dye.jpg" />
-      </a>
-    </div>
-    <div class="column has-text-centered">
-      <a
-        href="/MGMT/assets/images/ben-hat.jpg"
-        data-lightbox="demo-lightbox"
-        data-title="Smoking">
-        <img src="/MGMT/assets/images/ben-hat.jpg" />
+        <img class="gallery" src="/assets/images/mgmt-concert-barcelona.jpg" />
       </a>
     </div>
   </div>
