--- a/product-details.html
+++ b/product-details.html
@@ -45,7 +45,7 @@
   </nav>
 <div class="content">
    <div class="first">
-      <img height="353px" width="325px" src="/MGMT/assets/images/white-sweater.jpg" alt="White Sweater" />
+      <img class="product-pic" height="353px" width="325px" src="/MGMT/assets/images/white-sweater.jpg" alt="White Sweater" />
     <div class="details">
       <ul>
           <h1>MGMT Psychedelic Hoodie</h1>
