--- a/shop.html
+++ b/shop.html
@@ -60,9 +60,9 @@
   </nav>
   <div class="content">
     <style>
-        /* .filtr-item {
+        .filtr-item {
           width: 25%;
-        } */
+        }
         @media screen and (max-width: 720px){
           .filtr-item {
             width: 100%;
@@ -75,8 +75,7 @@
           <img width="253" height="263" src="/MGMT/assets/images/white-sweater.jpg" alt="White Sweater"  />
           <h2>MGMT Sweater</h2>
           <h2>$40.00</h2>
-          <a href="http://melissaegan.me/MGMT/product-details.html" class="cart"><span>Add to Cart</span></a>
-          <!-- <button id="myButton" title="Add to Cart" <a href="http://melissaegan.me/MGMT/product-details.html" class="cart"><span>Add to Cart</span></a></button> -->
+          <a href="product-details.html" class="cart"><span>Add to Cart</span></a>
         </div>
         <div class="filtr-item wrapper" data-category="1" data-sort="value">
           <img class="imgA" width="253" height="263" src="/MGMT/assets/images/crystalcastles.jpg" alt="cat shirt"  />
