fixed stupid button halo on shop page

--- a/about.html
+++ b/about.html
@@ -47,9 +47,9 @@
     <div class="content">
       <div class="row">
         <div class="col">
-          <img src="assets/images/purple-bckgd.jpg" alt="Band Members" />
+          <img src="assets/images/purple-bckgd.jpg" alt="Band Members" class="img"/>
         </div>
-        <div class="col">
+        <div class="col text">
           <p>Ben Goldwasser and Andrew VanWyngarden formed the band while attending Wesleyan University during their freshman year. "We weren't trying to start a band,"
            remarked Goldwasser. "We were just hanging out and showing each other music that we liked." They experimented with noise rock and electronica before settling
            on what Paco Alvarez of Spin calls "their current brand of shape-shifting psychedelic pop.” The band formed under the name The Management.
