changed paths to ./assets instead of MGMT/assets - might break on hosted, if so revert back

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="index.html">
-        <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+        <img src="./assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
       </a>
       <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
