--- a/music.html
+++ b/music.html
@@ -26,7 +26,7 @@
   </style>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <a class="navbar-item" href="index.html">
-          <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+          <img src="./assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
         </a>
         <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
           <span aria-hidden="true"></span>
@@ -46,7 +46,7 @@
   </nav>
   <div class="content">
     <div class="first">
-      <img src="/MGMT/assets/images/ocular-spectacular.jpg" alt="Band Members" class="img" />
+      <img src="./assets/images/ocular-spectacular.jpg" alt="Band Members" class="img" />
       <ul class="ocular">
         <h1>Ocular Spectacular</h1>
         <p>October 2, 2007 <br />
@@ -70,7 +70,7 @@
       </ul>
   </div>
       <div class="second">
-      <img src="/MGMT/assets/images/Congratulations.jpg" alt="Band Members" class="img" id="congratulations"/>
+      <img src="./assets/images/Congratulations.jpg" alt="Band Members" class="img" id="congratulations"/>
         <ul class="congrats">
           <h1>Congratulations</h1>
             <p>April 13, 2010<br />
@@ -93,7 +93,7 @@
         </ul>
     </div>
     <div class="third">
-      <img src="/MGMT/assets/images/mgmt-self-titled.jpg" alt="Band Members" class="img" />
+      <img src="./assets/images/mgmt-self-titled.jpg" alt="Band Members" class="img" />
         <ul class="mgmt">
           <h1>MGMT</h1>
           <p>September 17, 2013<br />
@@ -117,7 +117,7 @@
         </ul>
     </div>
     <div class="fourth">
-      <img src="/MGMT/assets/images/little-dark-age.jpg" alt="Band Members" class="img" />
+      <img src="./assets/images/little-dark-age.jpg" alt="Band Members" class="img" />
         <ul class="lda">
           <h1>Little Dark Age</h1>
           <p>February 9, 2018<br />
