--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
   <!-- OPTIONAL IMPORTS -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
   <!-- END OPTIONAL IMPORTS -->
-  <!-- <link rel="stylesheet" type="text/css" href="/MGMT/assets/stylesheets/bootstrap-iso.css"/> -->
+  <!-- <link rel="stylesheet" type="text/css" href="./assets/stylesheets/bootstrap-iso.css"/> -->
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/shop.css" />
   <link rel="stylesheet" href="Filterizr-master/demo/index.css" />
 </head>
@@ -26,7 +26,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="index.html">
-        <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+        <img src="./assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
       </a>
       <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
@@ -72,119 +72,119 @@
     <div class="row push-down">
       <div class="filtr-container">
         <div class="filtr-item wrapper" data-category="2" data-sort="value">
-          <img width="253" height="263" src="/MGMT/assets/images/white-sweater.jpg" alt="White Sweater"  />
+          <img width="253" height="263" src="./assets/images/white-sweater.jpg" alt="White Sweater"  />
           <h2>MGMT Sweater</h2>
           <h2>$40.00</h2>
           <a href="product-details.html" class="cart"><span>Add to Cart</span></a>
         </div>
         <div class="filtr-item wrapper" data-category="1" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/crystalcastles.jpg" alt="cat shirt"  />
+          <img class="imgA" width="253" height="263" src="./assets/images/crystalcastles.jpg" alt="cat shirt"  />
           <h2>Crystal Castles T-Shirt</h2>
           <h2>$25.00</h2>
           <div type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></div>
         </div>
         <div class="filtr-item wrapper" data-category="2" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/cranberrysweater.jpg" alt="sweater"  />
+          <img class="imgA" width="253" height="263" src="./assets/images/cranberrysweater.jpg" alt="sweater"  />
           <h2>Heart Sweatshirt</h2>
           <h2>$40.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="1" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/gloopyloopstshirt.jpg" alt="gloopy tshirt"  />
+          <img class="imgA" width="253" height="263" src="./assets/images/gloopyloopstshirt.jpg" alt="gloopy tshirt"  />
           <h2>Gloopy Loopy T-Shirt</h2>
           <h2>$25.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="2" data-sort="value">
-          <img class="imgA" width="253" height="263"src="/MGMT/assets/images/greenhoodie2.png" alt="green"  />
+          <img class="imgA" width="253" height="263"src="./assets/images/greenhoodie2.png" alt="green"  />
           <h2>Little Dark Age Sweater</h2>
           <h2>$35.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="1" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/beigetshirt.jpg" alt="beige shirt" />
+          <img class="imgA" width="253" height="263" src="./assets/images/beigetshirt.jpg" alt="beige shirt" />
           <h2>Dragon T-Shirt</h2>
           <h2>$25.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="1" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/yellowwomensshirt.jpeg" alt="yellow shirt"  />
+          <img class="imgA" width="253" height="263" src="./assets/images/yellowwomensshirt.jpeg" alt="yellow shirt"  />
           <h2>Yellow Duck T-Shirt</h2>
           <h2>$25.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="3" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/1st-album.jpg" alt="Ocular Spectacular Album"  />
+          <img class="imgA" width="253" height="263" src="./assets/images/1st-album.jpg" alt="Ocular Spectacular Album"  />
           <h2>Oracular Spectacular CD</h2>
           <h2>$14.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="3" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/2nd-album.jpg" alt="Congratulations Album"  />
+          <img class="imgA" width="253" height="263" src="./assets/images/2nd-album.jpg" alt="Congratulations Album"  />
           <h2>Congratulations CD</h2>
           <h2>$14.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="3" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/3rd-album.jpg" alt="MGMT Album"  />
+          <img class="imgA" width="253" height="263" src="./assets/images/3rd-album.jpg" alt="MGMT Album"  />
           <h2>MGMT (The Album) CD</h2>
           <h2>$14.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="3" data-sort="value">
-          <img class="imgA" width="253" height="263" src="/MGMT/assets/images/4th-album.png" alt="Little Dark Age Album"  />
+          <img class="imgA" width="253" height="263" src="./assets/images/4th-album.png" alt="Little Dark Age Album"  />
           <h2>Little Dark Age Vinyl LP</h2>
           <h2>$30.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="4" data-sort="value">
-          <img class="imgA" width="188" height="250" src="/MGMT/assets/images/poster1.jpg" alt="Poster"  />
+          <img class="imgA" width="188" height="250" src="./assets/images/poster1.jpg" alt="Poster"  />
           <h2>MGMT Flames Salt Lake City '13 Poster</h2>
           <h2>$10.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="4" data-sort="value">
-          <img class="imgA" width="167" height="250" src="/MGMT/assets/images/poster2.jpg" alt="Poster"  />
+          <img class="imgA" width="167" height="250" src="./assets/images/poster2.jpg" alt="Poster"  />
           <h2>MGMT Space Alaska '14 Poster</h2>
           <h2>$10.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="4" data-sort="value">
-          <img class="imgA" width="190" height="250" src="/MGMT/assets/images/poster3.jpg" alt="Poster"  />
+          <img class="imgA" width="190" height="250" src="./assets/images/poster3.jpg" alt="Poster"  />
           <h2>MGMT Hollywood '08 Poster</h2>
           <h2>$10.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="4" data-sort="value">
-          <img class="imgA" width="188" height="250" src="/MGMT/assets/images/poster4.jpg" alt="Poster"  />
+          <img class="imgA" width="188" height="250" src="./assets/images/poster4.jpg" alt="Poster"  />
           <h2>MGMT Pozo '11 Poster</h2>
           <h2>$10.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="4" data-sort="value">
-          <img class="imgA" width="153" height="250" src="/MGMT/assets/images/poster5.jpg" alt="Poster"  />
+          <img class="imgA" width="153" height="250" src="./assets/images/poster5.jpg" alt="Poster"  />
           <h2>MGMT Houston '10 Poster</h2>
           <h2>$10.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="4" data-sort="value">
-          <img class="imgA" width="150" height="250" src="/MGMT/assets/images/poster6.jpg" alt="Poster"  />
+          <img class="imgA" width="150" height="250" src="./assets/images/poster6.jpg" alt="Poster"  />
           <h2>MGMT Mexico '16 Poster</h2>
           <h2>$10.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
         <div class="filtr-item wrapper" data-category="4" data-sort="value">
-          <img class="imgA" width="170" height="250" src="/MGMT/assets/images/poster7.jpg" alt="Poster"  />
+          <img class="imgA" width="170" height="250" src="./assets/images/poster7.jpg" alt="Poster"  />
           <h2>Brooklyn '13 Poster</h2>
           <h2>$10.00</h2>
           <button type="button" title="Add to Cart" class="btn-crt" oneclick=""><span>Out of Stock</span></button>
         </div>
       </div>
     </div>
-    <script src="/MGMT/assets/javascripts/functions.js"></script>
-    <script src="/MGMT/assets/javascripts/jquery.min.js"></script>
-    <script src="/MGMT/assets/javascripts/jquery.filterizr.min.js"></script>
-    <script src="/MGMT/assets/javascripts/functions.js"></script>
+    <script src="./assets/javascripts/functions.js"></script>
+    <script src="./assets/javascripts/jquery.min.js"></script>
+    <script src="./assets/javascripts/jquery.filterizr.min.js"></script>
+    <script src="./assets/javascripts/functions.js"></script>
     <script>
       $(document).ready(function(){
         console.log('jquery is enabled');
