--- a/tour.html
+++ b/tour.html
@@ -21,7 +21,7 @@
     </style>
       <nav class="navbar" role="navigation" aria-label="main navigation">
           <a class="navbar-item" href="index.html">
-            <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+            <img src="./assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
           </a>
           <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
             <span aria-hidden="true"></span>
