--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="index.html">
-        <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+        <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
       </a>
       <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
@@ -38,12 +38,13 @@
     </div>
   </nav>
   <div class="content">
-    <video poster="guy-falling.jpg" autoplay="true" loop>
+    <video poster="./assets/images/guy-falling.jpg" autoplay="true" preload='auto' loop>
     <!-- <source src="video.webm" type='video/webm; codecs="vp8.0, vorbis"'>
     <source src="video.ogv" type='video/ogg; codecs="theora, vorbis"'> -->
-      <source src="assets/images/video2.mp4" type="video/mp4">
+      <source src="./assets/images/video2.mp4" type="video/mp4">
     </video>
   <script src="assets/javascripts/functions.js"></script>
   <script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
+</div>
 </body>
 </html>
