added content to homepage and fixed about page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>MGMT</title>
   <!-- OPTIONAL IMPORTS -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
+  <link type="text/css" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
   <!-- END OPTIONAL IMPORTS -->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/>
   <link rel="stylesheet" type="text/css" href="slick-master/slick/slick.css"/>
@@ -43,8 +44,16 @@
     <source src="video.ogv" type='video/ogg; codecs="theora, vorbis"'> -->
       <source src="./assets/images/video2.mp4" type="video/mp4">
     </video>
+    <div class="overlay">
+      <h1>New Album Out Now!</h1>
+      <img src="assets/images/little-dark-age.jpeg" alt="Little Dark Age" class="img"/>
+      <div class="buttons">
+       <a href="http://smarturl.it/littledarkage?IQid=ldasite" class="button">LISTEN</a>
+       <a href="tour.html" class="button">BUY TICKETS</a>
+    </div>
+  </div>
+</div>
   <script src="assets/javascripts/functions.js"></script>
   <script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
-</div>
 </body>
 </html>
