--- a/music.html
+++ b/music.html
@@ -10,6 +10,7 @@
   <!-- OPTIONAL IMPORTS -->
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/bulma.min.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
+  <link type="text/css" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
   <!-- END OPTIONAL IMPORTS -->
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/>
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/music.css" />
