--- a/product-details.html
+++ b/product-details.html
@@ -8,9 +8,11 @@
   <title>Music</title>
   <!-- OPTIONAL IMPORTS -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
+  <link type="text/css" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
   <!-- END OPTIONAL IMPORTS -->
   <!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/bootstrap-iso.css"/> -->
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/product-details.css" />
+
 </head>
 <body>
   <style>
@@ -25,7 +27,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
-          <img src="/MGMT/assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
+          <img src="assets/images/shadow-logo.png" alt="MGMT" class="logo"/>
         </a>
         <a id="main-menu" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
           <span aria-hidden="true"></span>
@@ -45,15 +47,15 @@
   </nav>
 <div class="content">
    <div class="first">
-      <img class="product-pic" height="353px" width="325px" src="/MGMT/assets/images/white-sweater.jpg" alt="White Sweater" />
+      <img class="product-pic" height="353px" width="325px" src="assets/images/white-sweater.jpg" alt="White Sweater" />
     <div class="details">
       <ul>
           <h1>MGMT Psychedelic Hoodie</h1>
           <p>Availability: In Stock<br />
             <br />Details: MGMT Logo design printed on a white hoodie.<br /></p>
-            <br /><h1>$40.00</h1>
+            <br /><h2>$40.00</h2>
             <p>Size:</p>
-          <img class="dropdown" src="/MGMT/assets/images/dropdown.png" alt="drop-down"  />
+          <img class="dropdown" src="assets/images/dropdown.png" alt="drop-down"  />
           <button title="Add to Cart" class="button" oneclick=""><span>Add to Cart</span></button>
       </ul>
   </div>
