--- a/tour.html
+++ b/tour.html
@@ -8,6 +8,7 @@
   <title>Tour</title>
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css" /> -->
   <link rel="stylesheet" href="./assets/stylesheets/tour.css" />
+  <link type="text/css" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
 </head>
 <body>
     <style>
